Reviewed: eclipse.jdt.core