@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2020 IBM Corporation and others.
+ * Copyright (c) 2000, 2021 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -138,7 +138,6 @@ public abstract class AbstractRegressionTest extends AbstractCompilerTest implem
 
 		ASTVisitor visitor;
 
-		@SuppressWarnings("synthetic-access")
 		protected void runConformTest() {
 			runTest(this.shouldFlushOutputDirectory,
 					this.testFiles,
@@ -164,7 +163,6 @@ public abstract class AbstractRegressionTest extends AbstractCompilerTest implem
 					this.skipJavac ? JavacTestOptions.SKIP : this.javacTestOptions);
 		}
 
-		@SuppressWarnings("synthetic-access")
 		protected void runNegativeTest() {
 			runTest(this.shouldFlushOutputDirectory,
 					this.testFiles,
@@ -190,7 +188,6 @@ public abstract class AbstractRegressionTest extends AbstractCompilerTest implem
 					this.skipJavac ? JavacTestOptions.SKIP : this.javacTestOptions);
 		}
 
-		@SuppressWarnings("synthetic-access")
 		protected void runWarningTest() {
 			runTest(this.shouldFlushOutputDirectory,
 					this.testFiles,
@@ -244,7 +241,7 @@ static class JavacCompiler {
 		this.compliance = CompilerOptions.versionToJdkLevel(this.version);
 		this.minor = minorFromRawVersion(this.version, rawVersion);
 		this.rawVersion = rawVersion;
-		StringBuffer classpathBuffer = new StringBuffer(" -classpath ");
+		StringBuilder classpathBuffer = new StringBuilder(" -classpath ");
 		this.classpath = classpathBuffer.toString();
 	}
 	/** Call this if " -classpath " should be replaced by some other option token. */
@@ -307,6 +304,10 @@ static class JavacCompiler {
 			return JavaCore.VERSION_13;
 		} else if(rawVersion.startsWith("14")) {
 			return JavaCore.VERSION_14;
+		} else if(rawVersion.startsWith("15")) {
+			return JavaCore.VERSION_15;
+		} else if(rawVersion.startsWith("16")) {
+			return JavaCore.VERSION_16;
 		} else {
 			throw new RuntimeException("unknown javac version: " + rawVersion);
 		}
@@ -462,6 +463,34 @@ static class JavacCompiler {
 				return 0200;
 			}
 		}
+		if (version == JavaCore.VERSION_15) {
+			if ("15-ea".equals(rawVersion)) {
+				return 0000;
+			}
+			if ("15".equals(rawVersion)) {
+				return 0000;
+			}
+			if ("15.0.1".equals(rawVersion)) {
+				return 0100;
+			}
+			if ("15.0.2".equals(rawVersion)) {
+				return 0200;
+			}
+		}
+		if (version == JavaCore.VERSION_16) {
+			if ("16-ea".equals(rawVersion)) {
+				return 0000;
+			}
+			if ("16".equals(rawVersion)) {
+				return 0000;
+			}
+			if ("16.0.1".equals(rawVersion)) {
+				return 0100;
+			}
+			if ("16.0.2".equals(rawVersion)) {
+				return 0200;
+			}
+		}
 		throw new RuntimeException("unknown raw javac version: " + rawVersion);
 	}
 	// returns 0L if everything went fine; else the lower word contains the
@@ -477,7 +506,7 @@ static class JavacCompiler {
 			if (!directory.exists()) {
 				directory.mkdir();
 			}
-			StringBuffer cmdLine = new StringBuffer(this.javacPathName);
+			StringBuilder cmdLine = new StringBuilder(this.javacPathName);
 			cmdLine.append(this.classpath);
 			cmdLine.append(". ");
 			cmdLine.append(options);
@@ -553,7 +582,7 @@ static class JavaRuntime {
 	int execute(File directory, String options, String className, StringBuffer stdout, StringBuffer stderr) throws IOException, InterruptedException {
 		Process executionProcess = null;
 		try {
-			StringBuffer cmdLine = new StringBuffer(this.javaPathName);
+			StringBuilder cmdLine = new StringBuilder(this.javaPathName);
 			if (options.contains("-cp "))
 				cmdLine.append(' '); // i.e., -cp will be appended below, just ensure separation from javaPathname
 			else
@@ -1202,7 +1231,7 @@ protected static class JavacTestOptions {
 	public final static String MODULE_INFO_NAME = new String(TypeConstants.MODULE_INFO_NAME);
 
 	public static boolean SHIFT = false;
-	public static String PREVIEW_ALLOWED_LEVEL = JavaCore.VERSION_14;
+	public static String PREVIEW_ALLOWED_LEVEL = JavaCore.latestSupportedJavaVersion();
 
 	protected static final String SOURCE_DIRECTORY = Util.getOutputDirectory()  + File.separator + "source";
 
@@ -1215,7 +1244,7 @@ protected static class JavacTestOptions {
 		super(name);
 	}
 	protected boolean checkPreviewAllowed() {
-		return this.complianceLevel == ClassFileConstants.JDK14;
+		return this.complianceLevel == ClassFileConstants.getLatestJDKLevel();
 	}
 	protected void checkClassFile(String className, String source, String expectedOutput) throws ClassFormatException, IOException {
 		this.checkClassFile("", className, source, expectedOutput, ClassFileBytesDisassembler.SYSTEM);
@@ -1396,6 +1425,8 @@ protected static class JavacTestOptions {
 			int major = (int)(this.complianceLevel>>16);
 			buffer.append("\" -" + (major - ClassFileConstants.MAJOR_VERSION_0));
 		}
+		if (this.complianceLevel == ClassFileConstants.getLatestJDKLevel()  && this.enablePreview)
+			buffer.append(" --enable-preview ");
 		buffer
 			.append(" -preserveAllLocals -proceedOnError -nowarn -g -classpath \"")
 			.append(Util.getJavaClassLibsAsString())
@@ -1532,7 +1563,7 @@ protected static class JavacTestOptions {
 	 */
 	protected String findReferences(String classFilePath) {
 		// check that "new Z().init()" is bound to "AbstractB.init()"
-		final StringBuffer references = new StringBuffer(10);
+		final StringBuilder references = new StringBuilder(10);
 		final SearchParticipant participant = new JavaSearchParticipant() {
 			final SearchParticipant searchParticipant = this;
 			public SearchDocument getDocument(final String documentPath) {
@@ -2156,10 +2187,10 @@ protected static class JavacTestOptions {
 			writeFiles(testFiles);
 
 			// Prepare command line
-			StringBuffer cmdLine = new StringBuffer(javacCommandLineHeader);
+			StringBuilder cmdLine = new StringBuilder(javacCommandLineHeader);
 			// compute extra classpath
 			String[] classpath = Util.concatWithClassLibs(JAVAC_OUTPUT_DIR_NAME, false);
-			StringBuffer cp = new StringBuffer(" -classpath ");
+			StringBuilder cp = new StringBuilder(" -classpath ");
 			int length = classpath.length;
 			for (int i = 0; i < length; i++) {
 				if (i > 0)
@@ -2241,7 +2272,7 @@ protected static class JavacTestOptions {
 					if (expectedSuccessOutputString != null && !javacTestErrorFlag) {
 						// Neither Eclipse nor Javac found errors, and we have a runtime
 						// bench value
-						StringBuffer javaCmdLine = new StringBuffer(javaCommandLineHeader);
+						StringBuilder javaCmdLine = new StringBuilder(javaCommandLineHeader);
 						javaCmdLine.append(cp);
 						javaCmdLine.append(' ').append(testFiles[0].substring(0, testFiles[0].indexOf('.')));
 							// assume executable class is name of first test file - PREMATURE check if this is also the case in other test fwk classes
@@ -2322,7 +2353,7 @@ protected static class JavacTestOptions {
 		Process compileProcess = null;
 		try {
 			// Prepare command line
-			StringBuffer cmdLine = new StringBuffer(javacCommandLineHeader);
+			StringBuilder cmdLine = new StringBuilder(javacCommandLineHeader);
 			cmdLine.append(' ');
 			cmdLine.append(options);
 			// add source files
@@ -3770,6 +3801,52 @@ protected void runNegativeTest(
 		// javac options
 		javacTestOptions /* javac test options */);
 }
+//runNegativeTest(
+//// test directory preparation
+//new String[] { /* test files */
+//},
+//null /* no test files */,
+//// compiler results
+//"----------\n" + /* expected compiler log */
+//// javac options
+//JavacTestOptions.SKIP /* skip javac tests */);
+//JavacTestOptions.DEFAULT /* default javac test options */);
+//javacTestOptions /* javac test options */);
+protected void runNegativeTest(
+// test directory preparation
+String[] testFiles,
+String[] dependentFiles,
+// compiler results
+String expectedCompilerLog,
+// javac options
+JavacTestOptions javacTestOptions) {
+	runTest(
+			// test directory preparation
+		true /* flush output directory */,
+		testFiles /* test files */,
+		dependentFiles,
+		// compiler options
+		null /* no class libraries */,
+		false,
+		null /* no custom options */,
+		false /* do not perform statements recovery */,
+		null /* no custom requestor */,
+		// compiler results
+		true /* expecting compiler errors */,
+		expectedCompilerLog /* expected compiler log */,
+		// runtime options
+		null,
+		false /* do not force execution */,
+		null /* no vm arguments */,
+		// runtime results
+		null /* do not check output string */,
+		null /* do not check error string */,
+		null,
+		null,
+		// javac options
+		javacTestOptions /* javac test options */,
+		Charset.defaultCharset());
+}
 //	runNegativeTest(
 //		// test directory preparation
 //		true /* flush output directory */,
@@ -3922,10 +3999,10 @@ protected void runNegativeTest(
 					else
 						jdkRootDirPath = new Path(jdkRootDirectory);
 
-					StringBuffer cmdLineHeader = new StringBuffer(jdkRootDirPath.
+					StringBuilder cmdLineHeader = new StringBuilder(jdkRootDirPath.
 							append("bin").append(JAVA_NAME).toString()); // PREMATURE replace JAVA_NAME and JAVAC_NAME with locals? depends on potential reuse
 					javaCommandLineHeader = cmdLineHeader.toString();
-					cmdLineHeader = new StringBuffer(jdkRootDirPath.
+					cmdLineHeader = new StringBuilder(jdkRootDirPath.
 							append("bin").append(JAVAC_NAME).toString());
 					cmdLineHeader.append(" -classpath . ");
 					  // start with the current directory which contains the source files
@@ -4017,9 +4094,9 @@ protected void runNegativeTest(
 	}
 	protected Map<String, String> setPresetPreviewOptions() {
 		Map<String, String> options = getCompilerOptions();
-		options.put(JavaCore.COMPILER_COMPLIANCE, JavaCore.VERSION_14);
-		options.put(JavaCore.COMPILER_SOURCE, JavaCore.VERSION_14);
-		options.put(JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, JavaCore.VERSION_14);
+		options.put(JavaCore.COMPILER_COMPLIANCE, JavaCore.latestSupportedJavaVersion());
+		options.put(JavaCore.COMPILER_SOURCE, JavaCore.latestSupportedJavaVersion());
+		options.put(JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, JavaCore.latestSupportedJavaVersion());
 		options.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.ENABLED);
 		options.put(CompilerOptions.OPTION_ReportPreviewFeatures, CompilerOptions.IGNORE);
 		return options;
