@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2019 IBM Corporation and others.
+ * Copyright (c) 2000, 2020 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -72,6 +72,7 @@ import java.util.Properties;
 import java.util.ResourceBundle;
 import java.util.Set;
 import java.util.StringTokenizer;
+import java.util.function.Function;
 
 import org.eclipse.jdt.core.compiler.CategorizedProblem;
 import org.eclipse.jdt.core.compiler.CharOperation;
@@ -91,6 +92,7 @@ import org.eclipse.jdt.internal.compiler.batch.ModuleFinder.AddExport;
 import org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants;
 import org.eclipse.jdt.internal.compiler.classfmt.ClassFileReader;
 import org.eclipse.jdt.internal.compiler.classfmt.ClassFormatException;
+import org.eclipse.jdt.internal.compiler.classfmt.ExternalAnnotationProvider;
 import org.eclipse.jdt.internal.compiler.env.AccessRestriction;
 import org.eclipse.jdt.internal.compiler.env.AccessRule;
 import org.eclipse.jdt.internal.compiler.env.AccessRuleSet;
@@ -124,7 +126,6 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		private PrintWriter log;
 		private Main main;
 		private PrintWriter out;
-		private HashMap<String, Object> parameters;
 		int tagBits;
 		private static final String CLASS = "class"; //$NON-NLS-1$
 		private static final String CLASS_FILE = "classfile"; //$NON-NLS-1$
@@ -216,7 +217,6 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		public Logger(Main main, PrintWriter out, PrintWriter err) {
 			this.out = out;
 			this.err = err;
-			this.parameters = new HashMap<>();
 			this.main = main;
 		}
 
@@ -228,7 +228,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 
 			outputPath = outputPath.replace('/', fileSeparatorChar);
 			// To be able to pass the mkdirs() method we need to remove the extra file separator at the end of the outDir name
-			StringBuffer outDir = new StringBuffer(outputPath);
+			StringBuilder outDir = new StringBuilder(outputPath);
 			if (!outputPath.endsWith(fileSeparator)) {
 				outDir.append(fileSeparator);
 			}
@@ -317,7 +317,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				|| (length = unitSource.length) == 0)
 				return Messages.problem_noSourceInformation;
 
-			StringBuffer errorBuffer = new StringBuffer();
+			StringBuilder errorBuffer = new StringBuilder();
 			if ((bits & Main.Logger.EMACS) == 0) {
 				errorBuffer.append(' ').append(Messages.bind(Messages.problem_atLine, String.valueOf(problem.getSourceLineNumber())));
 				errorBuffer.append(Util.LINE_SEPARATOR);
@@ -380,10 +380,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 					|| (unitSource == null)
 					|| ((length = unitSource.length) <= 0)
 					|| (endPosition > length)) {
-				this.parameters.put(Logger.VALUE, Messages.problem_noSourceInformation);
-				this.parameters.put(Logger.SOURCE_START, "-1"); //$NON-NLS-1$
-				this.parameters.put(Logger.SOURCE_END, "-1"); //$NON-NLS-1$
-				printTag(Logger.SOURCE_CONTEXT, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.VALUE, Messages.problem_noSourceInformation);
+				parameters.put(Logger.SOURCE_START, "-1"); //$NON-NLS-1$
+				parameters.put(Logger.SOURCE_END, "-1"); //$NON-NLS-1$
+				printTag(Logger.SOURCE_CONTEXT, parameters, true, true);
 				return;
 			}
 
@@ -409,11 +410,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			// copy source
 			StringBuffer buffer = new StringBuffer();
 			buffer.append(unitSource, begin, end - begin + 1);
-
-			this.parameters.put(Logger.VALUE, String.valueOf(buffer));
-			this.parameters.put(Logger.SOURCE_START, Integer.toString(startPosition - begin));
-			this.parameters.put(Logger.SOURCE_END, Integer.toString(endPosition - begin));
-			printTag(Logger.SOURCE_CONTEXT, this.parameters, true, true);
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.VALUE, String.valueOf(buffer));
+			parameters.put(Logger.SOURCE_START, Integer.toString(startPosition - begin));
+			parameters.put(Logger.SOURCE_END, Integer.toString(endPosition - begin));
+			printTag(Logger.SOURCE_CONTEXT, parameters, true, true);
 		}
 		public void flush() {
 			this.out.flush();
@@ -507,8 +508,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				}
 				File f = new File(fileName);
 				try {
-					this.parameters.put(Logger.PATH, f.getCanonicalPath());
-					printTag(Logger.CLASS_FILE, this.parameters, true, true);
+					HashMap<String, Object> parameters = new HashMap<>();
+					parameters.put(Logger.PATH, f.getCanonicalPath());
+					printTag(Logger.CLASS_FILE, parameters, true, true);
 				} catch (IOException e) {
 					logNoClassFileCreated(outputPath, relativeFileName, e);
 				}
@@ -520,10 +522,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				final int length = classpaths.length;
 				if (length != 0) {
 					// generate xml output
-					printTag(Logger.CLASSPATHS, null, true, false);
+					printTag(Logger.CLASSPATHS, new HashMap<>(), true, false);
+					HashMap<String, Object> parameters = new HashMap<>();
 					for (int i = 0; i < length; i++) {
 						String classpath = classpaths[i].getPath();
-						this.parameters.put(Logger.PATH, classpath);
+						parameters.put(Logger.PATH, classpath);
 						File f = new File(classpath);
 						String id = null;
 						if (f.isFile()) {
@@ -540,8 +543,8 @@ public class Main implements ProblemSeverities, SuffixConstants {
 							id = Logger.CLASSPATH_FOLDER;
 						}
 						if (id != null) {
-							this.parameters.put(Logger.CLASSPATH_ID, id);
-							printTag(Logger.CLASSPATH, this.parameters, true, true);
+							parameters.put(Logger.CLASSPATH_ID, id);
+							printTag(Logger.CLASSPATH, parameters, true, true);
 						}
 					}
 					endTag(Logger.CLASSPATHS);
@@ -556,10 +559,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				final int length = commandLineArguments.length;
 				if (length != 0) {
 					// generate xml output
-					printTag(Logger.COMMAND_LINE_ARGUMENTS, null, true, false);
+					printTag(Logger.COMMAND_LINE_ARGUMENTS, new HashMap<>(), true, false);
 					for (int i = 0; i < length; i++) {
-						this.parameters.put(Logger.VALUE, commandLineArguments[i]);
-						printTag(Logger.COMMAND_LINE_ARGUMENT, this.parameters, true, true);
+						HashMap<String, Object> parameters = new HashMap<>();
+						parameters.put(Logger.VALUE, commandLineArguments[i]);
+						printTag(Logger.COMMAND_LINE_ARGUMENT, parameters, true, true);
 					}
 					endTag(Logger.COMMAND_LINE_ARGUMENTS);
 				}
@@ -580,7 +584,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 				LineNumberReader reader = new LineNumberReader(new StringReader(stackTrace));
 				String line;
 				int i = 0;
-				StringBuffer buffer = new StringBuffer();
+				StringBuilder buffer = new StringBuilder();
 				String message = e.getMessage();
 				if (message != null) {
 					buffer.append(message).append(Util.LINE_SEPARATOR);
@@ -595,9 +599,10 @@ public class Main implements ProblemSeverities, SuffixConstants {
 					// ignore
 				}
 				message = buffer.toString();
-				this.parameters.put(Logger.MESSAGE, message);
-				this.parameters.put(Logger.CLASS, e.getClass());
-				printTag(Logger.EXCEPTION, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, message);
+				parameters.put(Logger.CLASS, e.getClass());
+				printTag(Logger.EXCEPTION, parameters, true, true);
 			}
 			String message = e.getMessage();
 			if (message == null) {
@@ -697,16 +702,18 @@ public class Main implements ProblemSeverities, SuffixConstants {
 
 		public void logUnavaibleAPT(String className) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, this.main.bind("configure.unavailableAPT", className)); //$NON-NLS-1$
-				printTag(Logger.ERROR_TAG, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, this.main.bind("configure.unavailableAPT", className)); //$NON-NLS-1$
+				printTag(Logger.ERROR_TAG, parameters, true, true);
 			}
 			this.printlnErr(this.main.bind("configure.unavailableAPT", className)); //$NON-NLS-1$
 		}
 
 		public void logIncorrectVMVersionForAnnotationProcessing() {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, this.main.bind("configure.incorrectVMVersionforAPT")); //$NON-NLS-1$
-				printTag(Logger.ERROR_TAG, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, this.main.bind("configure.incorrectVMVersionforAPT")); //$NON-NLS-1$
+				printTag(Logger.ERROR_TAG, parameters, true, true);
 			}
 			this.printlnErr(this.main.bind("configure.incorrectVMVersionforAPT")); //$NON-NLS-1$
 		}
@@ -716,13 +723,14 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logNoClassFileCreated(String outputDir, String relativeFileName, IOException e) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, this.main.bind("output.noClassFileCreated", //$NON-NLS-1$
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, this.main.bind("output.noClassFileCreated", //$NON-NLS-1$
 					new String[] {
 						outputDir,
 						relativeFileName,
 						e.getMessage()
 					}));
-				printTag(Logger.ERROR_TAG, this.parameters, true, true);
+				printTag(Logger.ERROR_TAG, parameters, true, true);
 			}
 			this.printlnErr(this.main.bind("output.noClassFileCreated", //$NON-NLS-1$
 				new String[] {
@@ -737,8 +745,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logNumberOfClassFilesGenerated(int exportedClassFilesCounter) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.VALUE, Integer.valueOf(exportedClassFilesCounter));
-				printTag(Logger.NUMBER_OF_CLASSFILES, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.VALUE, Integer.valueOf(exportedClassFilesCounter));
+				printTag(Logger.NUMBER_OF_CLASSFILES, parameters, true, true);
 			}
 			if (exportedClassFilesCounter == 1) {
 				printlnOut(this.main.bind("compile.oneClassFileGenerated")); //$NON-NLS-1$
@@ -753,7 +762,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logOptions(Map<String, String> options) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				printTag(Logger.OPTIONS, null, true, false);
+				printTag(Logger.OPTIONS, new HashMap<>(), true, false);
 				final Set<Map.Entry<String, String>> entriesSet = options.entrySet();
 				Map.Entry<String, String>[] entries = entriesSet.toArray(new Map.Entry[entriesSet.size()]);
 				Arrays.sort(entries, new Comparator<Map.Entry<String, String>>() {
@@ -764,12 +773,13 @@ public class Main implements ProblemSeverities, SuffixConstants {
 						return entry1.getKey().compareTo(entry2.getKey());
 					}
 				});
+				HashMap<String, Object> parameters = new HashMap<>();
 				for (int i = 0, max = entries.length; i < max; i++) {
 					Map.Entry<String, String> entry = entries[i];
 					String key = entry.getKey();
-					this.parameters.put(Logger.KEY, key);
-					this.parameters.put(Logger.VALUE, entry.getValue());
-					printTag(Logger.OPTION, this.parameters, true, true);
+					parameters.put(Logger.KEY, key);
+					parameters.put(Logger.VALUE, entry.getValue());
+					printTag(Logger.OPTION, parameters, true, true);
 				}
 				endTag(Logger.OPTIONS);
 			}
@@ -780,8 +790,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logPendingError(String error) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, error);
-				printTag(Logger.ERROR_TAG, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, error);
+				printTag(Logger.ERROR_TAG, parameters, true, true);
 			}
 			this.printlnErr(error);
 		}
@@ -791,8 +802,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logWarning(String message) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, message);
-				printTag(Logger.WARNING_TAG, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, message);
+				printTag(Logger.WARNING_TAG, parameters, true, true);
 			}
 			this.printlnOut(message);
 		}
@@ -906,12 +918,13 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			int globalErrorsCount, int globalWarningsCount, int globalInfoCount, int globalTasksCount) {
 			if ((this.tagBits & Logger.XML) != 0) {
 				// generate xml
-				this.parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(globalProblemsCount));
-				this.parameters.put(Logger.NUMBER_OF_ERRORS, Integer.valueOf(globalErrorsCount));
-				this.parameters.put(Logger.NUMBER_OF_WARNINGS, Integer.valueOf(globalWarningsCount));
-				this.parameters.put(Logger.NUMBER_OF_INFOS, Integer.valueOf(globalInfoCount));
-				this.parameters.put(Logger.NUMBER_OF_TASKS, Integer.valueOf(globalTasksCount));
-				printTag(Logger.PROBLEM_SUMMARY, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(globalProblemsCount));
+				parameters.put(Logger.NUMBER_OF_ERRORS, Integer.valueOf(globalErrorsCount));
+				parameters.put(Logger.NUMBER_OF_WARNINGS, Integer.valueOf(globalWarningsCount));
+				parameters.put(Logger.NUMBER_OF_INFOS, Integer.valueOf(globalInfoCount));
+				parameters.put(Logger.NUMBER_OF_TASKS, Integer.valueOf(globalTasksCount));
+				printTag(Logger.PROBLEM_SUMMARY, parameters, true, true);
 			}
 			if (globalProblemsCount == 1) {
 				String message = null;
@@ -1013,10 +1026,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			long time = compilerStats.elapsedTime();
 			long lineCount = compilerStats.lineCount;
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.VALUE, Long.valueOf(time));
-				printTag(Logger.TIME, this.parameters, true, true);
-				this.parameters.put(Logger.VALUE, Long.valueOf(lineCount));
-				printTag(Logger.NUMBER_OF_LINES, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.VALUE, Long.valueOf(time));
+				printTag(Logger.TIME, parameters, true, true);
+				parameters.put(Logger.VALUE, Long.valueOf(lineCount));
+				printTag(Logger.NUMBER_OF_LINES, parameters, true, true);
 			}
 			if (lineCount != 0) {
 				printlnOut(
@@ -1092,8 +1106,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 */
 		public void logWrongJDK() {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.MESSAGE, this.main.bind("configure.requiresJDK1.2orAbove")); //$NON-NLS-1$
-				printTag(Logger.ERROR, this.parameters, true, true);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.MESSAGE, this.main.bind("configure.requiresJDK1.2orAbove")); //$NON-NLS-1$
+				printTag(Logger.ERROR, parameters, true, true);
 			}
 			this.printlnErr(this.main.bind("configure.requiresJDK1.2orAbove")); //$NON-NLS-1$
 		}
@@ -1102,13 +1117,14 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			final int sourceStart = problem.getSourceStart();
 			final int sourceEnd = problem.getSourceEnd();
 			boolean isError = problem.isError();
-			this.parameters.put(Logger.PROBLEM_SEVERITY, isError ? Logger.ERROR : (problem.isInfo() ? Logger.INFO : Logger.WARNING));
-			this.parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
-			this.parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(sourceStart));
-			this.parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(sourceEnd));
-			printTag(Logger.EXTRA_PROBLEM_TAG, this.parameters, true, false);
-			this.parameters.put(Logger.VALUE, problem.getMessage());
-			printTag(Logger.PROBLEM_MESSAGE, this.parameters, true, true);
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.PROBLEM_SEVERITY, isError ? Logger.ERROR : (problem.isInfo() ? Logger.INFO : Logger.WARNING));
+			parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
+			parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(sourceStart));
+			parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(sourceEnd));
+			printTag(Logger.EXTRA_PROBLEM_TAG, parameters, true, false);
+			parameters.put(Logger.VALUE, problem.getMessage());
+			printTag(Logger.PROBLEM_MESSAGE, parameters, true, true);
 			extractContext(problem, null);
 			endTag(Logger.EXTRA_PROBLEM_TAG);
 		}
@@ -1122,31 +1138,34 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			final int sourceStart = problem.getSourceStart();
 			final int sourceEnd = problem.getSourceEnd();
 			final int id = problem.getID();
-			this.parameters.put(Logger.ID, getFieldName(id)); // ID as field name
-			this.parameters.put(Logger.PROBLEM_ID, Integer.valueOf(id)); // ID as numeric value
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.ID, getFieldName(id)); // ID as field name
+			parameters.put(Logger.PROBLEM_ID, Integer.valueOf(id)); // ID as numeric value
 			boolean isError = problem.isError();
 			int severity = isError ? ProblemSeverities.Error : ProblemSeverities.Warning;
-			this.parameters.put(Logger.PROBLEM_SEVERITY, isError ? Logger.ERROR : (problem.isInfo() ? Logger.INFO : Logger.WARNING));
-			this.parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
-			this.parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(sourceStart));
-			this.parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(sourceEnd));
+			parameters.put(Logger.PROBLEM_SEVERITY, isError ? Logger.ERROR : (problem.isInfo() ? Logger.INFO : Logger.WARNING));
+			parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
+			parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(sourceStart));
+			parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(sourceEnd));
 			String problemOptionKey = getProblemOptionKey(id);
 			if (problemOptionKey != null) {
-				this.parameters.put(Logger.PROBLEM_OPTION_KEY, problemOptionKey);
+				parameters.put(Logger.PROBLEM_OPTION_KEY, problemOptionKey);
 			}
 			int categoryID = ProblemReporter.getProblemCategory(severity, id);
-			this.parameters.put(Logger.PROBLEM_CATEGORY_ID, Integer.valueOf(categoryID));
-			printTag(Logger.PROBLEM_TAG, this.parameters, true, false);
-			this.parameters.put(Logger.VALUE, problem.getMessage());
-			printTag(Logger.PROBLEM_MESSAGE, this.parameters, true, true);
+			parameters.put(Logger.PROBLEM_CATEGORY_ID, Integer.valueOf(categoryID));
+			printTag(Logger.PROBLEM_TAG, parameters, true, false);
+			parameters.put(Logger.VALUE, problem.getMessage());
+			printTag(Logger.PROBLEM_MESSAGE, parameters, true, true);
 			extractContext(problem, unitSource);
 			String[] arguments = problem.getArguments();
 			final int length = arguments.length;
 			if (length != 0) {
-				printTag(Logger.PROBLEM_ARGUMENTS, null, true, false);
+				parameters = new HashMap<>();
+				printTag(Logger.PROBLEM_ARGUMENTS, parameters, true, false);
 				for (int i = 0; i < length; i++) {
-					this.parameters.put(Logger.PROBLEM_ARGUMENT_VALUE, arguments[i]);
-					printTag(Logger.PROBLEM_ARGUMENT, this.parameters, true, true);
+					parameters = new HashMap<>();
+					parameters.put(Logger.PROBLEM_ARGUMENT_VALUE, arguments[i]);
+					printTag(Logger.PROBLEM_ARGUMENT, parameters, true, true);
 				}
 				endTag(Logger.PROBLEM_ARGUMENTS);
 			}
@@ -1159,16 +1178,17 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 *            the given unit source
 		 */
 		private void logXmlTask(CategorizedProblem problem, char[] unitSource) {
-			this.parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
-			this.parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(problem.getSourceStart()));
-			this.parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(problem.getSourceEnd()));
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.PROBLEM_LINE, Integer.valueOf(problem.getSourceLineNumber()));
+			parameters.put(Logger.PROBLEM_SOURCE_START, Integer.valueOf(problem.getSourceStart()));
+			parameters.put(Logger.PROBLEM_SOURCE_END, Integer.valueOf(problem.getSourceEnd()));
 			String problemOptionKey = getProblemOptionKey(problem.getID());
 			if (problemOptionKey != null) {
-				this.parameters.put(Logger.PROBLEM_OPTION_KEY, problemOptionKey);
+				parameters.put(Logger.PROBLEM_OPTION_KEY, problemOptionKey);
 			}
-			printTag(Logger.TASK, this.parameters, true, false);
-			this.parameters.put(Logger.VALUE, problem.getMessage());
-			printTag(Logger.PROBLEM_MESSAGE, this.parameters, true, true);
+			printTag(Logger.TASK, parameters, true, false);
+			parameters.put(Logger.VALUE, problem.getMessage());
+			printTag(Logger.PROBLEM_MESSAGE, parameters, true, true);
 			extractContext(problem, unitSource);
 			endTag(Logger.TASK);
 		}
@@ -1215,7 +1235,7 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		public void printStats() {
 			final boolean isTimed = (this.main.timing & TIMING_ENABLED) != 0;
 			if ((this.tagBits & Logger.XML) != 0) {
-				printTag(Logger.STATS, null, true, false);
+				printTag(Logger.STATS, new HashMap<>(), true, false);
 			}
 			if (isTimed) {
 				CompilerStats compilerStats = this.main.batchCompiler.stats;
@@ -1238,9 +1258,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 
 		private void printTag(String name, HashMap<String, Object> params, boolean insertNewLine, boolean closeTag) {
 			if (this.log != null) {
-				((GenericXMLWriter) this.log).printTag(name, this.parameters, true, insertNewLine, closeTag);
+				((GenericXMLWriter) this.log).printTag(name, params, true, insertNewLine, closeTag);
 			}
-			this.parameters.clear();
+			if (params != null) params.clear();
 		}
 
 		public void setEmacs() {
@@ -1258,10 +1278,11 @@ public class Main implements ProblemSeverities, SuffixConstants {
 						// insert time stamp as comment
 						this.log.println("<!-- " + dateFormat.format(date) + " -->");//$NON-NLS-1$//$NON-NLS-2$
 						this.log.println(Logger.XML_DTD_DECLARATION);
-						this.parameters.put(Logger.COMPILER_NAME, this.main.bind("compiler.name")); //$NON-NLS-1$
-						this.parameters.put(Logger.COMPILER_VERSION, this.main.bind("compiler.version")); //$NON-NLS-1$
-						this.parameters.put(Logger.COMPILER_COPYRIGHT, this.main.bind("compiler.copyright")); //$NON-NLS-1$
-						printTag(Logger.COMPILER, this.parameters, true, false);
+						HashMap<String, Object> parameters = new HashMap<>();
+						parameters.put(Logger.COMPILER_NAME, this.main.bind("compiler.name")); //$NON-NLS-1$
+						parameters.put(Logger.COMPILER_VERSION, this.main.bind("compiler.version")); //$NON-NLS-1$
+						parameters.put(Logger.COMPILER_COPYRIGHT, this.main.bind("compiler.copyright")); //$NON-NLS-1$
+						printTag(Logger.COMPILER, parameters, true, false);
 					} else {
 						this.log = new PrintWriter(new FileOutputStream(logFileName, false));
 						this.log.println("# " + dateFormat.format(date));//$NON-NLS-1$
@@ -1277,8 +1298,9 @@ public class Main implements ProblemSeverities, SuffixConstants {
 			}
 		}
 		private void startLoggingExtraProblems(int count) {
-			this.parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(count));
-			printTag(Logger.EXTRA_PROBLEMS, this.parameters, true, false);
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(count));
+			printTag(Logger.EXTRA_PROBLEMS, parameters, true, false);
 		}
 
 		/**
@@ -1286,25 +1308,27 @@ public class Main implements ProblemSeverities, SuffixConstants {
 		 * Only use in xml mode.
 		 */
 		private void startLoggingProblems(int errors, int warnings, int infos) {
-			this.parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(errors + warnings));
-			this.parameters.put(Logger.NUMBER_OF_ERRORS, Integer.valueOf(errors));
-			this.parameters.put(Logger.NUMBER_OF_WARNINGS, Integer.valueOf(warnings));
-			this.parameters.put(Logger.NUMBER_OF_INFOS, Integer.valueOf(infos));
-			printTag(Logger.PROBLEMS, this.parameters, true, false);
+			HashMap<String, Object> parameters = new HashMap<>();
+			parameters.put(Logger.NUMBER_OF_PROBLEMS, Integer.valueOf(errors + warnings));
+			parameters.put(Logger.NUMBER_OF_ERRORS, Integer.valueOf(errors));
+			parameters.put(Logger.NUMBER_OF_WARNINGS, Integer.valueOf(warnings));
+			parameters.put(Logger.NUMBER_OF_INFOS, Integer.valueOf(infos));
+			printTag(Logger.PROBLEMS, parameters, true, false);
 		}
 
 		public void startLoggingSource(CompilationResult compilationResult) {
 			if ((this.tagBits & Logger.XML) != 0) {
 				ICompilationUnit compilationUnit = compilationResult.compilationUnit;
+				HashMap<String, Object> parameters = new HashMap<>();
 				if (compilationUnit != null) {
     				char[] fileName = compilationUnit.getFileName();
     				File f = new File(new String(fileName));
     				if (fileName != null) {
-    					this.parameters.put(Logger.PATH, f.getAbsolutePath());
+    					parameters.put(Logger.PATH, f.getAbsolutePath());
     				}
     				char[][] packageName = compilationResult.packageName;
     				if (packageName != null) {
-    					this.parameters.put(
+    					parameters.put(
     							Logger.PACKAGE,
     							new String(CharOperation.concatWith(packageName, File.separatorChar)));
     				}
@@ -1315,26 +1339,27 @@ public class Main implements ProblemSeverities, SuffixConstants {
 					}
 					if (destinationPath != null && destinationPath != NONE) {
 						if (File.separatorChar == '/') {
-							this.parameters.put(Logger.OUTPUT, destinationPath);
+							parameters.put(Logger.OUTPUT, destinationPath);
 						} else {
-							this.parameters.put(Logger.OUTPUT, destinationPath.replace('/', File.separatorChar));
+							parameters.put(Logger.OUTPUT, destinationPath.replace('/', File.separatorChar));
 						}
 					}
 				}
-				printTag(Logger.SOURCE, this.parameters, true, false);
+				printTag(Logger.SOURCE, parameters, true, false);
 			}
 		}
 
 		public void startLoggingSources() {
 			if ((this.tagBits & Logger.XML) != 0) {
-				printTag(Logger.SOURCES, null, true, false);
+				printTag(Logger.SOURCES, new HashMap<>(), true, false);
 			}
 		}
 
 		public void startLoggingTasks(int tasks) {
 			if ((this.tagBits & Logger.XML) != 0) {
-				this.parameters.put(Logger.NUMBER_OF_TASKS, Integer.valueOf(tasks));
-				printTag(Logger.TASKS, this.parameters, true, false);
+				HashMap<String, Object> parameters = new HashMap<>();
+				parameters.put(Logger.NUMBER_OF_TASKS, Integer.valueOf(tasks));
+				printTag(Logger.TASKS, parameters, true, false);
 			}
 		}
 	}
@@ -1906,7 +1931,7 @@ public void configure(String[] argv) {
 			if (arg.startsWith("@")) { //$NON-NLS-1$
 				try {
 					LineNumberReader reader = new LineNumberReader(new StringReader(new String(Util.getFileCharContent(new File(arg.substring(1)), null))));
-					StringBuffer buffer = new StringBuffer();
+					StringBuilder buffer = new StringBuilder();
 					String line;
 					while((line = reader.readLine()) != null) {
 						line = line.trim();
@@ -2112,9 +2137,29 @@ public void configure(String[] argv) {
 						continue;
 					}
 				}
+				if (currentArg.equals("-15") || currentArg.equals("-15.0")) { //$NON-NLS-1$ //$NON-NLS-2$
+					if (didSpecifyCompliance) {
+						throw new IllegalArgumentException(
+							this.bind("configure.duplicateCompliance", currentArg)); //$NON-NLS-1$
+					}
+					didSpecifyCompliance = true;
+					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_15);
+					mode = DEFAULT;
+					continue;
+				}
+				if (currentArg.equals("-16") || currentArg.equals("-16.0")) { //$NON-NLS-1$ //$NON-NLS-2$
+					if (didSpecifyCompliance) {
+						throw new IllegalArgumentException(
+							this.bind("configure.duplicateCompliance", currentArg)); //$NON-NLS-1$
+					}
+					didSpecifyCompliance = true;
+					this.options.put(CompilerOptions.OPTION_Compliance, CompilerOptions.VERSION_16);
+					mode = DEFAULT;
+					continue;
+				}
 				if (currentArg.equals("-d")) { //$NON-NLS-1$
 					if (this.destinationPath != null) {
-						StringBuffer errorMessage = new StringBuffer();
+						StringBuilder errorMessage = new StringBuilder();
 						errorMessage.append(currentArg);
 						if ((index + 1) < argCount) {
 							errorMessage.append(' ');
@@ -2133,7 +2178,7 @@ public void configure(String[] argv) {
 				}
 				if (currentArg.equals("-bootclasspath")) {//$NON-NLS-1$
 					if (bootclasspaths.size() > 0) {
-						StringBuffer errorMessage = new StringBuffer();
+						StringBuilder errorMessage = new StringBuilder();
 						errorMessage.append(currentArg);
 						if ((index + 1) < argCount) {
 							errorMessage.append(' ');
@@ -2154,7 +2199,7 @@ public void configure(String[] argv) {
 					mode = INSIDE_SYSTEM;
 					continue;
 				}
-				if (currentArg.equals("--module-path") || currentArg.equals("-p") || currentArg.equals("--processor-module-path")) { //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+				if (currentArg.equals("--module-path") || currentArg.equals("-p")) { //$NON-NLS-1$ //$NON-NLS-2$
 					mode = INSIDE_MODULEPATH_start;
 					continue;
 				}
@@ -2187,7 +2232,7 @@ public void configure(String[] argv) {
 				}
 				if (currentArg.equals("-sourcepath")) {//$NON-NLS-1$
 					if (sourcepathClasspathArg != null) {
-						StringBuffer errorMessage = new StringBuffer();
+						StringBuilder errorMessage = new StringBuilder();
 						errorMessage.append(currentArg);
 						if ((index + 1) < argCount) {
 							errorMessage.append(' ');
@@ -2204,7 +2249,7 @@ public void configure(String[] argv) {
 				}
 				if (currentArg.equals("-extdirs")) {//$NON-NLS-1$
 					if (extdirsClasspaths != null) {
-						StringBuffer errorMessage = new StringBuffer();
+						StringBuilder errorMessage = new StringBuilder();
 						errorMessage.append(currentArg);
 						if ((index + 1) < argCount) {
 							errorMessage.append(' ');
@@ -2218,7 +2263,7 @@ public void configure(String[] argv) {
 				}
 				if (currentArg.equals("-endorseddirs")) { //$NON-NLS-1$
 					if (endorsedDirClasspaths != null) {
-						StringBuffer errorMessage = new StringBuffer();
+						StringBuilder errorMessage = new StringBuilder();
 						errorMessage.append(currentArg);
 						if ((index + 1) < argCount) {
 							errorMessage.append(' ');
@@ -3115,47 +3160,52 @@ public void configure(String[] argv) {
 		this.pendingErrors = null;
 	}
 }
-/** Translates any supported standarde version starting at 1.3 up-to latest into the corresponding constant from CompilerOptions */
-@SuppressWarnings("nls")
+/** Translates any supported standard version starting at 1.3 up-to latest into the corresponding constant from CompilerOptions */
 private String optionStringToVersion(String currentArg) {
 	switch (currentArg) {
-		case "1.3": return CompilerOptions.VERSION_1_3;
-		case "1.4": return CompilerOptions.VERSION_1_4;
-		case "1.5":
-		case "5":
-		case "5.0":
+		case "1.3": return CompilerOptions.VERSION_1_3; //$NON-NLS-1$
+		case "1.4": return CompilerOptions.VERSION_1_4; //$NON-NLS-1$
+		case "1.5": //$NON-NLS-1$
+		case "5": //$NON-NLS-1$
+		case "5.0": //$NON-NLS-1$
 			return CompilerOptions.VERSION_1_5;
-		case "1.6":
-		case "6":
-		case "6.0":
+		case "1.6": //$NON-NLS-1$
+		case "6": //$NON-NLS-1$
+		case "6.0": //$NON-NLS-1$
 			return CompilerOptions.VERSION_1_6;
-		case "1.7":
-		case "7":
-		case "7.0":
+		case "1.7": //$NON-NLS-1$
+		case "7": //$NON-NLS-1$
+		case "7.0": //$NON-NLS-1$
 			return CompilerOptions.VERSION_1_7;
-		case "1.8":
-		case "8":
-		case "8.0":
+		case "1.8": //$NON-NLS-1$
+		case "8": //$NON-NLS-1$
+		case "8.0": //$NON-NLS-1$
 			return CompilerOptions.VERSION_1_8;
-		case "1.9":
-		case "9":
-		case "9.0":
+		case "1.9": //$NON-NLS-1$
+		case "9": //$NON-NLS-1$
+		case "9.0": //$NON-NLS-1$
 			return CompilerOptions.VERSION_9;
-		case "10":
-		case "10.0":
+		case "10": //$NON-NLS-1$
+		case "10.0": //$NON-NLS-1$
 			return CompilerOptions.VERSION_10;
-		case "11":
-		case "11.0":
+		case "11": //$NON-NLS-1$
+		case "11.0": //$NON-NLS-1$
 			return CompilerOptions.VERSION_11;
-		case "12":
-		case "12.0":
+		case "12": //$NON-NLS-1$
+		case "12.0": //$NON-NLS-1$
 			return CompilerOptions.VERSION_12;
-		case "13":
-		case "13.0":
+		case "13": //$NON-NLS-1$
+		case "13.0": //$NON-NLS-1$
 			return CompilerOptions.VERSION_13;
-		case "14":
-		case "14.0":
+		case "14": //$NON-NLS-1$
+		case "14.0": //$NON-NLS-1$
 			return CompilerOptions.VERSION_14;
+		case "15": //$NON-NLS-1$
+		case "15.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_15;
+		case "16": //$NON-NLS-1$
+		case "16.0": //$NON-NLS-1$
+			return CompilerOptions.VERSION_16;
 		default:
 			return null;
 	}
@@ -3403,9 +3453,28 @@ public CompilationUnit[] getCompilationUnits() {
 					// if we got exception during canonicalization, fall back to the name that was specified
 					fileName = this.filenames[i];
 				}
+				Function<String,String> annotationPathProvider = null;
+				if (this.annotationsFromClasspath) {
+					annotationPathProvider = (String qualifiedTypeName) -> {
+						for (Classpath classpathEntry : this.checkedClasspaths) {
+							if (classpathEntry.hasAnnotationFileFor(qualifiedTypeName.replace('.', '/')))
+								return classpathEntry.getPath();
+						}
+						return null;
+					};
+				} else if (this.annotationPaths != null) {
+					annotationPathProvider = (String qualifiedTypeName) -> {
+						String eeaFileName = '/'+qualifiedTypeName.replace('.', '/')+ExternalAnnotationProvider.ANNOTATION_FILE_SUFFIX;
+						for (String annotationPath : this.annotationPaths) {
+							if (new File(annotationPath+eeaFileName).exists())
+								return annotationPath;
+						}
+						return null;
+					};
+				}
 				units[i] = new CompilationUnit(null, fileName, encoding, this.destinationPaths[i],
 						shouldIgnoreOptionalProblems(this.ignoreOptionalProblemsFromFolders, fileName.toCharArray()),
-						this.modNames[i]);
+						this.modNames[i], annotationPathProvider);
 			}
 		}
 	}
@@ -3436,8 +3505,8 @@ public IErrorHandlingPolicy getHandlingPolicy() {
 private void setJavaHome(String javaHome) {
 	File release = new File(javaHome, "release"); //$NON-NLS-1$
 	Properties prop = new Properties();
-	try {
-		prop.load(new FileReader(release));
+	try (FileReader reader = new FileReader(release)) {
+		prop.load(reader);
 		String ver = prop.getProperty("JAVA_VERSION"); //$NON-NLS-1$
 		if (ver != null)
 			ver = ver.replace("\"", "");  //$NON-NLS-1$//$NON-NLS-2$
@@ -4583,12 +4652,12 @@ protected void initializeAnnotationProcessorManager() {
 	String className = "org.eclipse.jdt.internal.compiler.apt.dispatch.BatchAnnotationProcessorManager"; //$NON-NLS-1$
 	try {
 		Class<?> c = Class.forName(className);
-		AbstractAnnotationProcessorManager annotationManager = (AbstractAnnotationProcessorManager) c.newInstance();
+		AbstractAnnotationProcessorManager annotationManager = (AbstractAnnotationProcessorManager) c.getDeclaredConstructor().newInstance();
 		annotationManager.configure(this, this.expandedCommandLine);
 		annotationManager.setErr(this.err);
 		annotationManager.setOut(this.out);
 		this.batchCompiler.annotationProcessorManager = annotationManager;
-	} catch (ClassNotFoundException | InstantiationException e) {
+	} catch (ClassNotFoundException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
 		this.logger.logUnavaibleAPT(className);
 		throw new org.eclipse.jdt.internal.compiler.problem.AbortCompilation();
 	} catch (IllegalAccessException e) {
@@ -5050,7 +5119,7 @@ private int processPaths(String[] args, int index, String currentArg, ArrayList<
 				this.bind("configure.unexpectedBracket", //$NON-NLS-1$
 							currentArg));
 	} else {
-		StringBuffer currentPath = new StringBuffer(currentArg);
+		StringBuilder currentPath = new StringBuilder(currentArg);
 		while (true) {
 			if (localIndex >= args.length) {
 				throw new IllegalArgumentException(
@@ -5108,7 +5177,7 @@ private int processPaths(String[] args, int index, String currentArg, String[] p
 	if (count == 0) {
 		paths[0] = currentArg;
 	} else {
-		StringBuffer currentPath = new StringBuffer(currentArg);
+		StringBuilder currentPath = new StringBuilder(currentArg);
 		while (true) {
 			localIndex++;
 			if (localIndex >= args.length) {
